Add subdirectories to cmake

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,13 +1,19 @@
 cmake_minimum_required(VERSION 3.16)
 project(RapidCDH)
 
+set(CMAKE_CXX_STANDARD 17)
+
+add_compile_options(-Wall)
+
 find_package(WiringPi REQUIRED)
 
-# Include headers
+# Include WiringPi headers
 include_directories(${WIRINGPI_INCLUDE_DIRS})
 
 add_executable(RapidCDH main.cpp)
 
-target_link_libraries(RapidCDH ${WIRINGPI_LIBRARIES})
+add_library(sensorsLib "")
 
-add_compile_options(-Wall)
+add_subdirectory(sensors)
+
+target_link_libraries(RapidCDH PUBLIC ${WIRINGPI_LIBRARIES})
