Start uCAM-III driver

--- a/src/sensors/CMakeLists.txt
+++ b/src/sensors/CMakeLists.txt
@@ -1,7 +1,9 @@
 target_sources(sensorsLib
     PRIVATE
-        sensor.cpp
-        sensor.h
+#        sensor.cpp
+#        sensor.h
         ina260.cpp
         ina260.h
+        ucam_iii.cpp
+        ucam_iii.h
 )
